--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "ejs": "^3.1.8",
-    "express": "^4.18.2",
+    "@sendgrid/mail": "^8.1.4",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
     "express-session": "^1.17.3"
   }
 }
