--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "type": "module",
-  "name": "landing-page",
+  "name": "solawi-website",
   "version": "1.0.0",
-  "description": "Katari Farms Landing Page",
-  "main": "index.js",
+  "description": "Solawi Website",
+  "main": "server/server.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server/server.js",
+    "dev": "nodemon server/server.js"
   },
   "dependencies": {
-    "@sendgrid/mail": "^8.1.4",
-    "body-parser": "^1.20.2",
-    "connect-flash": "^0.1.1",
-    "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "mongodb": "^6.13.0"
+    "mongoose": "^7.0.3",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
+    "@sendgrid/mail": "^7.7.0",
+    "cors": "^2.8.5",
+    "ejs": "^3.1.9"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
